Inflate and add Action item as PoC

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
 
     <!-- Active Tasks tab -->
     <string name="active_tasks">Active Tasks</string>
+    <string name="task_creation_on_action">Do Action(s)</string>
 </resources>
